# live-transcoder

./: .dockerignore  .gitignore  BaseComponent.cpp  BaseComponent.hpp  CMakeLists.txt  Dockerfile  FramesStats.c  FramesStats.h  KMP.c  KMP.h  Makefile  README.md  TranscodePipeline.c  TranscodePipeline.cpp  TranscodePipeline.h  TranscodePipeline.hpp  codec.c  codec.h  config.c  config.h  config.json  core.h  fileReader.c  fileReader.h  filter.c  filter.cpp  filter.h  filter.hpp  httpServer.c  httpServer.h  input.c  input.cpp  input.h  input.hpp  install_ffmpeg.sh  json_parser.c  json_parser.h  kalturaMediaProtocol.h  listener.c  listener.h  (+16 more)
KMP/: KMP.c  KMP.h  kalturaMediaProtocol.h
common/: json_parser.h  vector.c  vector.h
controller/: .gitignore  design.puml  package-lock.json  package.json  tsconfig.json
controller/config/: default.json
controller/deployment/: packager.yaml
controller/src/: BusinessLogic.ts  KalturaAPI.ts  KalturaDAL.ts  LocalCache.ts  app.ts  cache.ts  logger.ts  rtmpUtils.ts  utils.ts
controller/src/Data/: KalturaAPI.ts  KalturaChannel.ts  KalturaDAL.ts
controller/src/Logic/: BusinessLogic.ts  channelStarter.ts  channelStopper.ts
controller/src/Registries/: RegistryFactory.ts
controller/src/Registries/DistributedRegistry/: DistributedRegistry.ts  Kubernetes.ts
controller/src/Registries/KubernetesRegistry/: KubernetesRegistry.ts
controller/src/Registries/SingleServerRegistry/: SingleServerJob.ts  SingleServerRegistry.ts
controller/src/SystemObjects/: Packager.ts  Source.ts  SystemObject.ts  Transcoder.ts
controller/src/interfaces/: InputConfiguration.ts  channelOutput.ts  interfaces.ts  transcodingProfile.ts
controller/tests/: channelOutput.test.ts  kalturaDALMock.ts  test.ts  transcodingProfileTests.ts
live-transcoder.xcodeproj/: project.pbxproj
live-transcoder.xcodeproj/project.xcworkspace/xcuserdata/guyjacubovski.xcuserdatad/: UserInterfaceState.xcuserstate
live-transcoder.xcodeproj/xcshareddata/xcschemes/: live_transcoder.xcscheme
live-transcoder.xcodeproj/xcuserdata/guyjacubovski.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
live-transcoder.xcodeproj/xcuserdata/guyjacubovski.xcuserdatad/xcschemes/: ts_to_mp4_convertor.xcscheme  xcschememanagement.plist
transcoder/: config.json  receiver_server.c
utils/: logger.c  utils.c
